[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/enemies/ffm2.gd" type="Script" id=1]
[ext_resource path="res://assets/fingermage/fmsprite.png" type="Texture" id=2]
[ext_resource path="res://fmsprite.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 640, 641, 642, 643, 644, 645, 646, 647, 648, 649, 650, 651, 652, 653 ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 819 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 800, 801, 802, 803, 804, 805, 806, 807, 808, 809, 810, 811, 812, 813, 814, 815, 816, 817, 818, 819 ]
}

[sub_resource type="Animation" id=4]
resource_name = "gethit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 320, 321, 322, 323 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492, 493 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fmsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 160, 161, 162, 163, 164, 165, 166, 167, 168, 169 ]
}

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.4
bottom_radius = 1.4
radial_segments = 6
rings = 2

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 1, 0, 0, 1 )
roughness = 0.0
emission_enabled = true
emission = Color( 1, 0.723816, 0.292969, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderShape" id=11]
radius = 4.66679
height = 10.0

[sub_resource type="CylinderShape" id=12]
radius = 63.4719
height = 26.0

[sub_resource type="CylinderShape" id=13]
radius = 33.3229
height = 26.0

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3( 0, 9.8, 0 )
initial_velocity = 1.0
angular_velocity = 7.84727e-044
radial_accel = 2.0
radial_accel_random = 1.0
scale = 6.0
scale_random = 0.2

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
params_depth_draw_mode = 3
albedo_color = Color( 0.427451, 0, 0, 0.705882 )
roughness = 0.8

[sub_resource type="SphereMesh" id=16]
material = SubResource( 15 )
radius = 0.1
height = 0.5
radial_segments = 6
rings = 3

[sub_resource type="BoxShape" id=17]
extents = Vector3( 2.49592, 5.14271, 0.830188 )

[node name="ffm2" type="KinematicBody"]
collision_layer = 6
script = ExtResource( 1 )
ammo_in_turret = 5
AMMO_IN_FULL_TURRET = 5
AMMO_RELOAD_TIME = 4
FLASH_TIME = 0.1
FIRE_TIME = 0.8
PLAYER_HEIGHT = 4
MOVE_SPEED = 6
BLEED_TIME = 10
damage = 5
P_DAMAGE = 5
enemy_health = 20
MAX_ENEMY_HEALTH = 20

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 1 )
anims/death = SubResource( 2 )
anims/die = SubResource( 3 )
anims/gethit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/shoot = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="fmsprite" type="Sprite3D" parent="." groups=[
"ghost",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
material_override = SubResource( 8 )
pixel_size = 0.1
texture = ExtResource( 2 )
vframes = 48
hframes = 20
script = ExtResource( 3 )
anim_col = 819

[node name="Flash_2" type="MeshInstance" parent="."]
transform = Transform( 0.6, 0, 0, 0, -2.62268e-008, -0.6, 0, 0.6, -2.62268e-008, 0, 4.40941, 0.16621 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Flash" type="MeshInstance" parent="."]
transform = Transform( 0.6, 0, 0, 0, -2.62268e-008, -0.6, 0, 0.6, -2.62268e-008, 0, 5.44807, -0.21019 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Ray_Cast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.10698, -3.18493 )
cast_to = Vector3( 0, 0, -40 )

[node name="hitbox" type="Area" parent="."]
collision_layer = 2

[node name="Collision_Shape" type="CollisionShape" parent="hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 11 )

[node name="Chase_Area" type="Area" parent="."]
collision_layer = 2

[node name="Collision_Shape" type="CollisionShape" parent="Chase_Area"]
shape = SubResource( 12 )

[node name="Vision_Area" type="Area" parent="."]
collision_layer = 2

[node name="Collision_Shape" type="CollisionShape" parent="Vision_Area"]
shape = SubResource( 13 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.75254, 0.549067 )

[node name="Barrel_End" type="Spatial" parent="Head"]
transform = Transform( -1, 0, -1.50996e-007, 0, 1, 0, 1.50996e-007, 0, -1, 0, 2.22162, -3.5493 )

[node name="Smoke" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85465, 0.50817 )
emitting = false
amount = 64
lifetime = 1.4
visibility_aabb = AABB( -3.64419, -2.44026, -2.50963, 7.57765, 16.6094, 7.38895 )
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 16 )

[node name="Collision_Shape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 17 )

[node name="Loot_Holder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.02976, 0.75378, 2.00392 )

[node name="Loot_Holder2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75378, 0 )

[node name="Loot_Holder3" type="Spatial" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -2.90589, 0.75378, 0.0382887 )

[node name="Loot_Holder4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.11809, 0.75378, -2.02924 )

[node name="Loot_Holder5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.12006, 0.75378, 0 )

[node name="Loot_Holder6" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08003, 0.75378, 0 )

[node name="Loot_Holder7" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75378, 2.00198 )

[node name="Loot_Holder8" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75378, -2.04186 )

